--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,8 @@
 
 <body>
     <div class="main-content">
-        {{>header}} 
+        {{>header}}
+        <p>This site was created by Renxian Lu. It uses data from developers.google.com and darksky.net!</p>
         <img class="portrait" src="/img/Duck.png">  
     </div>
     {{>footer}}
